deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: battlesnake-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: battlesnake-deployment
  template:
    metadata:
      labels:
        app: battlesnake-deployment
    spec:
      containers: 
      - name: battlesnake-container
        image: acrbattlesnake.azurecr.io/erik_battlesnake:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: battlesnake
spec: 
  type: NodePort
  selector:
    app: battlesnake-deployment
  ports:
    - port: 80
      targetPort: 8000
